# actix-crud

./: Cargo.toml  configuration.yaml
data/: User.json
migrations/: 20230608073621_create_subscriptions_table.sql
scripts/: init_db.sh  run_only_first_time.sh
src/: handler.rs  main.rs  main.rs.back  model.rs  schema.rs
src/configuration/: db.rs
src/todolist/: mod.rs  services.rs
