[package]
name = "actix-crud"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6", features = [ "postgres", "runtime-tokio-rustls" ] }

