[package]
name = "actix-crud"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
actix-web = "4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.11"
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"
dotenv = "0.15.0"


